# transformerPractice

./: .gitignore  README.md  USAGE_EXAMPLES.md  api.py  dataPreprocessing.py  gradio_app.py  inference.py  main.py  pyproject.toml  run_server.py  spm.py  trainer.py  transformer.py  xlsxToText.py
config/: train.yaml
dataPreprocessing/: dataPreprocessing.py  pyproject.toml
model/: pyproject.toml  transformer.py
model/config/: train.yaml
triton/: pyproject.toml
triton/triton.egg-info/: PKG-INFO  SOURCES.txt
