[tool.uv]
override-dependencies = ["triton==0.0.1"]


[project]
name = "transformerpractice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "en-core-web-sm",
    "ko-core-news-sm",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "spacy>=3.8.8",
    "numpy<2.0.0",
    "torch==2.1.0",
    "torchtext==0.16.0",
    "hydra-core>=1.3.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz" }
ko-core-news-sm = { path = "tokenizer/ko_core_news_sm-3.8.0-py3-none-any.whl" }
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
triton = { path = "triton"}

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true